Added ability to display flash messages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+	
+	<!-- Render flash messages. -->
+	<% flash.each do |name, msg| %>
+		<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
+	<% end %>
+	
+	<%= yield %>
 
 </body>
 </html>
