--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,14 @@
 </head>
 <body>
 	
+	<!-- Render header. -->
+	<%= render 'layouts/header' %>
+	
 	<!-- Render flash messages. -->
 	<% flash.each do |name, msg| %>
 		<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
 	<% end %>
+	
 	
 	<%= yield %>
 
