--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -1,7 +1,9 @@
 <h1>CAS Buildings</h1>
 <% @buildings.each do |building| %>
 	<p><%= building.name %> - <%= building.short_name %></p>
-	<div class="admin_edit_links">
-		<%= render :partial => 'shared/admin_edit_links', :locals => { :object => building } %>
-	</div>
+	<% if logged_in? %>
+		<div class="admin_edit_links">
+			<%= render :partial => 'shared/admin_edit_links', :locals => { :object => building } %>
+		</div>
+	<% end %>
 <% end %>
