--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<% if current_admin %>
+<% if logged_in? %>
 	Logged in as <%= current_admin.username %>
 	<%= link_to "Logout", logout_path %>
 <% else %>
