--- a/app/views/buildings/_form.html.erb
+++ b/app/views/buildings/_form.html.erb
@@ -9,6 +9,7 @@
 		<%= f.text_field :short_name %>
 	</div>
 	<div class="field">
-		<%= f.submit (@building.new_record?) ? "Add Building" : "Update Building" %>
+		<% new_record = @building.new_record? %>
+		<%= f.submit new_record ? "Add Building" : "Update Building", :class => "btn btn-#{new_record ? 'success' : 'warning'}" %>
 	</div>
 <% end %>
