--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -17,6 +17,6 @@
 	
 	<div class="field">
 		<% new_record = @location.new_record? %>
-		<%= f.submit new_record ? "Add Location" : "Update Location", :class => "btn btn-#{new_record ? 'success' : 'warning'}" %>
+		<%= f.submit new_record ? "Add Location" : "Update Location", :class => submit_button_class(@location) %>
 	</div>
 <% end %>
