--- a/app/views/buildings/_form.html.erb
+++ b/app/views/buildings/_form.html.erb
@@ -1,15 +1,5 @@
-<%= render :partial => 'shared/error_messages', :locals => {:object => @building } %>
-<%= form_for @building do |f| %>
-	<div class="field">
-		<%= f.label :name %>
-		<%= f.text_field :name %>
-	</div>
-	<div class="field">
-		<%= f.label :short_name, "Short Name" %>
-		<%= f.text_field :short_name %>
-	</div>
-	<div class="field">
-		<% new_record = @building.new_record? %>
-		<%= f.submit new_record ? "Add Building" : "Update Building", :class => "btn btn-#{new_record ? 'success' : 'warning'}" %>
-	</div>
+<%= simple_form_for @building, :html => { :class => 'form-horizontal' } do |f| %>
+	<%= f.input :name %>
+	<%= f.input :short_name %>
+		<%= f.submit submit_button_text(@building, "Building"), :class => submit_button_css(@building) %>
 <% end %>
