--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -2,5 +2,5 @@
 		<%= f.association :building, :prompt => "Select a Building" %>
 		<%= f.input :room %>
 		<%= f.input :notes %>
-		<%= f.submit submit_button_text(@location, "Location"), :class => submit_button_css(@location) %>
+		<%= f.submit submit_button_text(@location, "Location"), :class => 'btn' %>
 <% end %>
