--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @location, :html => { :class => 'form-vertical' } do |f| %>
+		<%= f.error_notification %>
 		<%= f.association :building, :prompt => "Select a Building" %>
 		<%= f.input :room %>
 		<%= f.input :notes %>
