Changed New Location to New Room in sidebar link.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
 						<ul class="nav nav-list">
 							<li class="nav-header">Create</li>
 							<li><%= link_to "New Jack ID", "#"  %></li>
-							<li><%= link_to "New Location", new_location_path  %></li>
+							<li><%= link_to "New Room", new_location_path  %></li>
 							<li><%= link_to "New Building", new_building_path  %></li>
 						</ul>
 					</div><!--/.well -->
