Added show action for LocationsController and displayed new field: last_modified_at.

--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <th>Building Name</th>
       <th>Building Short Name</th>
-			<th>Admin</th>
+			<th>Actions</th>
     </tr>
   </thead>
   <tbody>
