--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -11,4 +11,5 @@
 </div>
 <p>Notes: <%= @location.notes %></p>
 <p>Last Modified: <%= relative_date_and_time_format_for @location.updated_at %></p>
+<%= link_to_floor_plan(@location) %>
 <%= button_to "Edit", edit_location_path(@location), :method => :get, :class => 'btn' %>
