Added mock up table of how Jack IDs table should be displayed.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 				<%= link_to "CAS Jack ID Database", root_path, :class => "brand" %>
 				<div class="container nav-collapse">
 					<ul class="nav">
+						<li><%= link_to "Jack IDs", jack_ids_path %></li>
 						<li><%= link_to "Rooms", locations_path  %></li>
 						<li><%= link_to "Buildings", buildings_path  %></li>
 					</ul>
