--- a/app/views/jack_ids/index.html.erb
+++ b/app/views/jack_ids/index.html.erb
@@ -1,7 +1,36 @@
 <h1>Jack IDs</h1>
-<% @jack_ids.each do |jack_id| %>
-	<p><%= jack_id.label %></p>
-	<div class="admin_edit_links">
-		<%= render :partial => 'shared/admin_edit_links', :locals => { :object => jack_id } %>
-	</div>
-<% end %>
+<table class="table table-bordered table-striped">
+  <thead>
+    <tr>
+    	<th>Building</th>
+      <th>Room</th>
+      <th>Jack IDs</th>
+      <th>Connections</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+  	<tr>
+  		<td>Bowman</td>
+  		<td>320-A</td>
+  		<td>
+  			<p>Bow-02-03-013</p>
+  			<p>Bow-02-03-014</p>
+  			<p>Bow-02-03-015</p>
+  		</td>
+  		<td>
+  			<p>AB</p>
+  			<p>ABC</p>
+  			<p>ABCDEF</p>
+  		</td>
+  		<td>Details</td>
+  	</tr>
+  	  	<tr>
+  		<td>Bowman</td>
+  		<td>330-A</td>
+  		<td>Bow-02-03-013</td>
+  		<td>AB</td>
+  		<td>Details</td>
+  	</tr>
+  </tbody>
+</table>
