Fixed small stupid error with add buttons on index views.

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -18,4 +18,4 @@
   </tbody>
 </table>
 <%=  paginate @admins %>
-<%= button_to "New Admin", new_admin_path, :method => :get, :class => 'btn' %>
+<%= link_to "New Admin", new_admin_path, :method => :get, :class => 'btn' %>
