--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -18,4 +18,4 @@
   </tbody>
 </table>
 <%=  paginate @buildings %>
-<%= button_to "New Building", new_building_path, :method => :get, :class => 'btn' %>
+<%= link_to "New Building", new_building_path, :method => :get, :class => 'btn' %>
