Added * indicator to tell if record has notes associated with it.

--- a/app/views/locations/_jack_ids.html.erb
+++ b/app/views/locations/_jack_ids.html.erb
@@ -24,6 +24,9 @@
         <% end %>
       </td>
       <td>
+        <% unless location.notes.blank? %>
+          <span class="has-notes">* </span>
+        <% end %>
         <%= link_to "Details", location_path(location) %> 
         <% if has_floor_plan?(location) %>
           | <%= link_to_floor_plan(location) %>
