--- a/app/views/locations/jack_ids.html.erb
+++ b/app/views/locations/jack_ids.html.erb
@@ -1,4 +1,7 @@
 <h1>Jack IDs</h1>
+<div class="symbols-legend">
+	<span class="has-notes">* </span> denotes that room has associated notes.
+</div>
 <div id="jack_ids">
   <%= render 'jack_ids' %>
 </div>
