--- a/app/assets/stylesheets/jack_ids.css.scss
+++ b/app/assets/stylesheets/jack_ids.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the jack_ids controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// For marker that denotes whehter location has notes field that is not blank.
+.has-notes {
+	color: red;
+}
