Refactored * notes indicator into helper and added it to Locations#index view as well.

--- a/app/views/locations/_jack_ids.html.erb
+++ b/app/views/locations/_jack_ids.html.erb
@@ -24,13 +24,11 @@
         <% end %>
       </td>
       <td>
-        <% unless location.notes.blank? %>
-          <span class="has-notes">* </span>
+        <% if has_floor_plan?(location) %>
+          <%= link_to_floor_plan(location) %> | 
         <% end %>
         <%= link_to "Details", location_path(location) %> 
-        <% if has_floor_plan?(location) %>
-          | <%= link_to_floor_plan(location) %>
-        <% end %>
+        <%= add_associated_notes_indicator_for(location) %>
       </td>
     </tr>
 	<% end %>
