--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Rooms</h1>
+<div class="symbols-legend">
+	<span class="has-notes">* </span> denotes that room has associated notes.
+</div>
 <div id="locations">
   <%= render 'locations' %>
 </div>
