--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
 						<h3>Admin Actions</h3>
 						<ul class="nav nav-list">
 							<li class="nav-header">Create</li>
-							<li><%= link_to "New Jack ID", "#"  %></li>
+							<!-- <li><%= link_to "New Jack ID", "#"  %></li> -->
 							<li><%= link_to "New Room", new_location_path  %></li>
 							
 						</ul>
