--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,6 +2,14 @@
 <div class="symbols-legend">
 	<span class="has-notes">* </span> denotes that room has associated notes.
 </div>
+
+<%= form_tag locations_path, method: :get do %>
+  <p>
+    <%= text_field_tag :query, params[:query] %>
+    <%= submit_tag "Search", name: nil %>
+  </p>
+<% end %>
+
 <div id="locations">
   <%= render 'locations' %>
 </div>
