Made Location#show view more user friendly.

--- a/app/views/locations/_jack_ids.html.erb
+++ b/app/views/locations/_jack_ids.html.erb
@@ -20,7 +20,7 @@
         <% end %>
       </td>
       <td>
-        <% location.jack_ids.each do |jack_id| %>
+        <% location.jack_ids.sort_by(&:label).each do |jack_id| %>
           <p><%= jack_id.connections %></p>
         <% end %>
       </td>
