Added some minor styling to website. More needed.

--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -1,4 +1,7 @@
-<h1>CAS Buildings</h1>
+<div class="page-header">
+  <h1>CAS Buildings</h1>
+</div>
+
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
