--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Admins</h1>
+<div class="page-header">
+  <h1>Admins</h1>
+</div>
+
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
