--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,7 +1,9 @@
-<h1>Rooms</h1>
+<div class="page-header">
+	<h1>Rooms</h1>
+</div>
 
 <div class="symbols-legend">
-	<span class="has-notes">* </span> denotes that room has associated notes.
+	<span class="label label-info">Important</span><span class="has-notes"> * </span> denotes that room has associated notes.
 </div>
 
 <div id="search">
